# facemask_detect

./: README.md
facemaskdetect/Keras-Python/: keras_infer.py  keras_loader.py
facemaskdetect/TFLite-Python/: Verify.py  tool.py
mindspore-lite-1.6.1-win10/: .commit_id  CMakeLists.txt  achors_data.h  facemaskdetect.h  img_test.h  img_test1.h  main.cc
mindspore-lite-1.6.1-win10/data/: no_person_image_data.h  person_image_data.h
mindspore-lite-1.6.1-win10/example/facemask_detect/: main.cc
mindspore-lite-1.6.1-win10/example/person_detect/: main.cc
mindspore-lite-1.6.1-win10/model/: face_mask_detection.ms
mindspore-lite-1.6.1-win10/runtime/include/schema/: model_generated.h  ops_generated.h  ops_types_generated.h
mindspore-lite-1.6.1-win10/tools/converter/converter/: MobileNetV1_person_detect.ms
